src/styles/sass/components/_menu.scss
.menu {
    width: 100%;
    position: fixed;
    top: 0;
    padding: 22px;
    background-color: $black;
    z-index: 9999;
    .image_div {
        width: 50px;
    }
    .header-right-side {
        margin-bottom: -10px;
        margin-top: 5px;
    }
    .user-dropdown {
        position: relative;
        display: flex;
        &:hover {
            .user-dropdown-menu {
                display: block;
            }
        }
        &-menu {
            position: absolute;
            right: 0;
            top: 51px;
            background-color: $black;
            border: 1px solid white;
            z-index: 999;
            font-variant: small-caps;
            color: white;
            font-weight: bold;
            font-size: 30px;
            line-height: 37px;
            display: none;
            & > li {
                cursor: pointer;
                border-bottom: 1px solid white;
                transition: 500ms;
                a {
                    display: inline-block;
                    padding: 12px 25px;
                }
                &:last-child {
                    border: none;
                }
                &:hover,
                &:hover {
                    a {
                        color: rgba(white, 0.5) !important;
                    }
                }
            }
        }
    }

    .header-btn {
        margin-right: 20px;
        font-weight: bold;
        font-size: 24px;
        line-height: 30px;
        color: $black;
        background-color: white;
        padding: 3px 30px;
        text-transform: uppercase;
        display: inline-block;
        &.sale {
            display: none;
            @include mq("tablet", max) {
                display: block;
            }
            @include mq("phone", max) {
                display: none;
            }
        }
        @include mq("phone", max) {
            display: none;
        }
    }

    @include mq("tablet", max) {
        padding: 9px 0;
    }
    @include mq("phone", max) {
        padding: 15px 0;
    }

    .menu__logo {
        svg {
            width: 200px;
            height: auto;

            @include mq("laptop") {
                width: 270px;
            }
        }
    }

    .menu__toggler {
        display: flex;
        flex-direction: column;
        cursor: pointer;
        z-index: 100;

        border: none !important;
        outline: none !important;
        background-color: transparent !important;

        span {
            height: 3px;
            position: relative;
            margin-bottom: 9px;
            background-color: #ffffff;
            transition: all 0.3s ease;

            @include mq("laptop") {
                margin-bottom: 14px;
            }

            &:first-child {
                width: 27px;

                @include mq("laptop") {
                    width: 40px;
                }
            }

            &:nth-child(2) {
                width: 16px;

                @include mq("laptop") {
                    width: 24px;
                }
            }

            &:last-child {
                width: 24px;
                margin: 0;

                @include mq("laptop") {
                    width: 36px;
                }
            }
        }
    }

    &.menu--active {
        .menu__toggler {
            span {
                &:first-child {
                    top: 11px;
                    transform: rotate(45deg);

                    @include mq("laptop") {
                        top: 16px;
                    }
                }

                &:nth-child(2) {
                    opacity: 0;
                }

                &:last-child {
                    width: 27px;
                    top: -11px;
                    transform: rotate(-45deg);

                    @include mq("laptop") {
                        width: 40px;
                        top: -18px;
                    }
                }
            }
        }
    }

    .menu__content {
        width: 100%;
        height: 100vh;
        position: absolute;
        top: 0;
        left: 0;
        background-color: rgba(0, 0, 0, 0.5);
        opacity: 0;
        visibility: hidden;
        transition: all 0.3s ease;

        .content {
            width: 100%;
            height: 100%;
            position: relative;
            left: 100%;
            padding: 80px 0;
            background-color: $black;
            transition: all 0.3s ease;

            @include mq("laptop") {
                width: 100%;
                left: 0;
                opacity: 0;
            }

            .content__section {
                padding: 0 40px;
            }

            .menu__items {
                width: 100%;
            }

            .menu__item {
                margin-bottom: 28px;
                text-align: center;
                text-transform: uppercase;

                @include mq("laptop") {
                    margin-bottom: 34px;
                }

                .active {
                    color: $white;
                    &::first-letter {
                        color: $green;
                    }
                }

                a {
                    font-size: 24px;
                    line-height: 29px;
                    font-weight: bold;
                    color: #424242;
                    &:hover {
                        color: $white;

                        &::first-letter {
                            color: $green;
                        }
                    }
                }
            }
        }
    }

    &.menu--active {
        .menu__content {
            opacity: 1;
            visibility: visible;

            .content {
                left: 0;

                @include mq("laptop") {
                    left: 0;
                    opacity: 1;
                }
            }
        }
    }
}

.header-currencies-dropdown {
    .currencies-dropdown-indicator {
        display: flex;
        align-items: center;
        justify-content: space-between;
        position: relative;

        width: 100px;
        color: white;
        background-color: $black;
        border: 1px solid white;

        font-weight: bold;
        font-variant: small-caps;
        line-height: 29px;
        text-align: center;
        font-size: 20px;

        padding: 5px 10px;
        margin-right: 15px;

        transition: 500ms;
        cursor: pointer;

        &:hover {
            opacity: 0.65;
        }

        .down-arrow {
            width: 25px;
            height: auto;
        }
    }
    .currencies-dropdown-content {
        position: absolute;
        width: 100px;
        border: 1px solid white;
        background-color: $black;
        border-top: 0px;

        font-weight: bold;
        font-variant: small-caps;
        line-height: 29px;
        text-align: left;
        font-size: 20px;

        li {
            transition: 500ms;
            padding: 5px 10px;
            cursor: pointer;
            &:hover {
                opacity: 0.65;
            }
        }
    }
}
.header-sale-cta {
    padding: 7px 50px;
    color: white;
    text-transform: uppercase;
    border: 1px solid white;
    font-weight: bold;
    transition: 500ms;
    margin-right: 15px;
    &:hover {
        color: white;
        opacity: 0.65;
    }
}

.header-avatar-user-tier {
    position: absolute;
    height: 10px;
    width: 10px;
    right: 3px;
    bottom: 5px;
    transform: scale(0.35);
    @include mq("phone") {
        right: 20px;
    }
}

